--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 	</properties>
 	<dependencies>
 	<dependency>
+    <groupId>commons-fileupload</groupId>
+    <artifactId>commons-fileupload</artifactId>
+    <version>1.4</version>
+</dependency>
+	<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
           	<artifactId>tomcat-embed-jasper</artifactId>
         </dependency>
