--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 spring.mvc.view.prefix=/WEB-INF/
+
+spring.servelet.multipart.max-file-size=15MB
+spring.servelet.multipart.max-request-size=15MB
