--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 spring.datasource.url=jdbc:mysql://localhost:3306/mood_schema
 spring.datasource.username=root
 spring.datasource.password==Chillstep1.
@@ -7,3 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 spring.mvc.view.prefix=/WEB-INF/
+
+spring.servlet.multipart.max-file-size=128KB
+spring.servlet.multipart.max-request-size=128KB
